feat(user): Add login and refresh token (#15)
Add /login route
Add /auth route
Add authentication documentation
Move db related code from data/user to database/user
Add refresh token generation for /login and /register
Write refresh token to redis
Add /auth/refresh route to get a new auth token
Add refresh token redis logic (delete and write)
