# microservices/user/app/handlers/register.go
@@ -8,7 +8,6 @@ import (
 	"github.com/alexandr-io/backend_errors"
 
 	"github.com/gofiber/fiber"
-	"go.mongodb.org/mongo-driver/bson"
 )
 
 // userRegister is the body parameter given to register a new user to the database.
@@ -32,8 +31,8 @@ type userRegister struct {
 	ConfirmPassword string `json:"confirm_password" validate:"required"`
 }
 
-// swagger:route POST /register USER registerUser
-// Register a new user and return it's information and JWT
+// swagger:route POST /register USER register
+// Register a new user and return it's information, auth token and refresh token
 // responses:
 //	201: userResponse
 //	400: badRequestErrorResponse
@@ -55,70 +54,32 @@ func Register(ctx *fiber.Ctx) {
 		return
 	}
 
-	// Get the mango collection object
-	userCollection := database.Instance.Db.Collection(database.CollectionUser)
-
 	// Insert the new data to the collection
-	insertResult, err := userCollection.InsertOne(ctx.Fasthttp, data.User{
+	insertedResult := database.InsertUserRegister(ctx, data.User{
 		Username: userRegister.Username,
 		Email:    userRegister.Email,
 		Password: hashAndSalt(userRegister.Password),
 	})
-	if database.IsMongoDupKey(err) {
-		// If the mongo db error is a duplication error, return the proper error
-		checkRegisterFieldDuplication(ctx, userRegister)
-		return
-	} else if err != nil {
-		backend_errors.InternalServerError(ctx, err)
+	if insertedResult == nil {
 		return
 	}
 
 	// Get the newly created user
-	createdUser, ok := data.GetUserByID(ctx, insertResult.InsertedID)
+	createdUser, ok := database.GetUserByID(ctx, insertedResult.InsertedID)
 	if !ok {
 		return
 	}
 
-	// Create JWT
-	jwt := newGlobalJWT(ctx, createdUser.Username)
-	if jwt == "" {
+	// Create auth and refresh token
+	refreshToken, authToken, ok := generateNewRefreshTokenAndAuthToken(ctx, createdUser.ID)
+	if !ok {
 		return
 	}
-	createdUser.JWT = jwt
+	createdUser.AuthToken = authToken
+	createdUser.RefreshToken = refreshToken
 
 	// Return the new user to the user
 	if err := ctx.Status(201).JSON(createdUser); err != nil {
 		backend_errors.InternalServerError(ctx, err)
 	}
-}
-
-// checkRegisterFieldDuplication check which field is a duplication on a register call.
-// The correct http error and content is handled and returned.
-// The function should only be called when an insertion return a duplication error. This can be checked by isMongoDupKey.
-func checkRegisterFieldDuplication(ctx *fiber.Ctx, userRegister *userRegister) {
-	errorsFields := make(map[string]string)
-
-	// Check if the duplication is for the email field
-	filter := bson.D{{Key: "email", Value: userRegister.Email}}
-	filteredByEmailUser := &data.User{}
-	err := database.FindOneWithFilter(ctx, filteredByEmailUser, filter)
-	if err == nil && filteredByEmailUser.Email == userRegister.Email {
-		errorsFields["email"] = "Email has already been taken."
-	} else if err != nil {
-		backend_errors.InternalServerError(ctx, err)
-		return
-	}
-
-	// Check if the duplication is for the username field
-	filter = bson.D{{Key: "username", Value: userRegister.Username}}
-	filteredByUsernameUser := &data.User{}
-	err = database.FindOneWithFilter(ctx, filteredByUsernameUser, filter)
-	if err == nil && filteredByUsernameUser.Username == userRegister.Username {
-		errorsFields["username"] = "Username has already been taken."
-	} else if err != nil {
-		backend_errors.InternalServerError(ctx, err)
-		return
-	}
-
-	ctx.Status(http.StatusBadRequest).SendBytes(backend_errors.BadInputsJSON(errorsFields))
 }
